from elisheva from final angular

--- a/src/app/components/layout/header/header.html
+++ b/src/app/components/layout/header/header.html
@@ -39,10 +39,10 @@
         <div class="dropdown">
             <a class="dropdown-trigger" routerLink="/manager" routerLinkActive="active">MANAGER</a>
             <div class="dropdown-content">
-                <a routerLink="/manager/gifts">ניהול מתנות</a>
-                <a routerLink="/manager/donors">ניהול תורמים</a>
-                <a routerLink="/manager/raffle">ניהול הגרלה</a>
-                <a routerLink="/manager/reports">דוחות</a>
+                <a routerLink="/manager/gifts">ניהול</a>
+                <a routerLink="/manager/donors">ניהול מתנות</a>
+                <a routerLink="/manager/raffle">ניהול תורמים</a>
+                <a routerLink="/manager/reports">ניהול משתמשים</a>
             </div>
         </div>
         }
